--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon"
-      type="image/png"
-      href="images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
   <title>Welcome Home</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
     crossorigin="anonymous">
@@ -16,12 +14,12 @@
 
 <body>
   <div class="container">
-  <div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
-    adsa
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 block">
+        adsa
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </body>
 
 </html>
