--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Welcome Home</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
     crossorigin="anonymous">
-  <link href="css/main.css">
+  <link rel="stylesheet" href="css/main.css" type="text/css">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
@@ -15,7 +15,10 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2 block">
+      <div class="col-sm-8 col-sm-offset-2 heading-block carousel slide" data-ride="carousel">
+
+      </div>
+      <div class="col-sm-8 col-sm-offset-2 main-block">
         adsa
       </div>
     </div>
