--- a/index.html
+++ b/index.html
@@ -15,11 +15,35 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-8 col-sm-offset-2 heading-block carousel slide" data-ride="carousel">
+      <div class="col-sm-8 col-sm-offset-1 columner">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
 
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="https://i.imgur.com/YIKDEye.jpg" alt="1st">
+            </div>
+
+            <div class="item">
+              <img src="https://i.imgur.com/atWzDOT.jpg" alt="2nd">
+            </div>
+
+            <div class="item">
+              <img src="https://i.imgur.com/N3ecyNH.jpg" alt="3rd">
+            </div>
+
+            <div class="item">
+              <img src="https://i.imgur.com/hah4b0J.jpg" alt="4th">
+            </div>
+          </div>
+
+        </div>
+
+        <div class="main-block">
+        </div>
       </div>
-      <div class="col-sm-8 col-sm-offset-2 main-block">
-        adsa
+      <div class="col-sm-2 columner">
+        <script src="https://redditjs.com/subreddit.js" data-subreddit="warframe" data-sort="top" data-timeframe="day" data-theme="dark" data-height="550"></script>
       </div>
     </div>
   </div>
