--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-sm-8 col-sm-offset-1 columner">
         <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
@@ -40,6 +40,7 @@
         </div>
 
         <div class="main-block">
+          <h3></h3>
         </div>
       </div>
       <div class="col-sm-2 columner">
