--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-  <title>Welcome Home</title>
+  <title>Bonjour</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" type="text/css">
@@ -164,10 +163,13 @@
       </div>
     </div>
     <div class="right-block">
-      <div id="news">
-      </div>
+      <iframe src="https://embed.spotify.com/?uri=spotify:user:1281363634:playlist:0uVT4xZF3USRjm23b0OlhX" frameborder="0" allowtransparency="true"></iframe>
     </div>
   </div>
+  <div class="text-center quote" id="quote">
+    "Die hard, live harder"
+  </div>
+
 </body>
 
 </html>
