--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id="title" class="text-center">Welcome</div>
 
-        <div class="sfw-content container" id="sfw">
+        <div class="content container" id="sfw">
           <div class="row">
             <div class="col-sm-3">
               <a href="https://twitter.com/">Twit</a>
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="nsfw-content container hidden" id="nsfw">
+        <div class="content container hidden" id="nsfw">
           <div class="row">
             <div class="col-sm-2">
               <a href="https://twitter.com/">Twit</a>
