--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
               <br/>
               <a href="https://www.youtube.com/feed/subscriptions">Tubes</a>
               <br/>
+              <a href="http://wiki.teamliquid.net/">TL</a>
+              <br/>
             </div>
             <div class="col-sm-3">
               <a href="http://www.amazon.com/">Amazon</a>
@@ -120,6 +122,8 @@
               <a href="https://www.reddit.com">Leddit</a>
               <br/>
               <a href="https://www.youtube.com/feed/subscriptions">Tubes</a>
+              <br/>
+              <a href="http://wiki.teamliquid.net/">TL</a>
               <br/>
             </div>
             <div class="col-sm-2">
@@ -185,7 +189,7 @@
     </div>
   </div>
   <div class="text-center quote" id="quote">
-    "Die hard, live harder"
+
   </div>
 
 
