--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 <body>
   <div class="contain">
     <div class="left-block">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="https://i.imgur.com/YIKDEye.jpg" alt="1st">
+            <img src="http://i.imgur.com/AN6uJPa.jpg" alt="1st">
           </div>
 
           <div class="item">
-            <img src="https://i.imgur.com/atWzDOT.jpg" alt="2nd">
+            <img src="http://i.imgur.com/sUEp811.jpg" alt="2nd">
           </div>
 
           <div class="item">
-            <img src="https://i.imgur.com/N3ecyNH.jpg" alt="3rd">
+            <img src="http://i.imgur.com/nEhoB49.jpg" alt="3rd">
           </div>
 
           <div class="item">
-            <img src="https://i.imgur.com/hah4b0J.jpg" alt="4th">
+            <img src="http://i.imgur.com/P83vV6R.jpg" alt="4th">
           </div>
         </div>
 
@@ -51,6 +51,9 @@
               <h4 class="modal-title" id="myModalLabel">Acknowledgements</h4>
             </div>
             <div class="modal-body">
+              Website made by <a href="https://lightredemption.github.io/">Tom Anderson</a> under GNU Public License 
+              <br/>
+              Technology: Bootstrap & jQuery
               <div>FavIcon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
 
             </div>
@@ -84,6 +87,8 @@
               <a href="https://outlook.live.com/owa/?id=64855">Hotmail</a>
               <br/>
               <a href="https://mail.google.com/mail/u/0/">Trash</a>
+              <br/>
+              <a href="https://warframe.market/">WFMarket</a>
               <br/>
             </div>
             <div class="col-sm-3">
@@ -134,6 +139,8 @@
               <a href="https://outlook.live.com/owa/?id=64855">Hotmail</a>
               <br/>
               <a href="https://mail.google.com/mail/u/0/">Trash</a>
+              <br/>
+              <a href="https://warframe.market/">WFMarket</a>
               <br/>
             </div>
             <div class="col-sm-2">
