--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="item">
-            <img src="http://i.imgur.com/sUEp811.jpg" alt="2nd">
+            <img src="http://i.imgur.com/YIKDEye.jpg" alt="2nd">
           </div>
 
           <div class="item">
@@ -51,7 +51,7 @@
               <h4 class="modal-title" id="myModalLabel">Acknowledgements</h4>
             </div>
             <div class="modal-body">
-              Website made by <a href="https://lightredemption.github.io/">Tom Anderson</a> under GNU Public License 
+              Website made by <a href="https://lightredemption.github.io/">Tom Anderson</a> under GNU Public License
               <br/>
               Technology: Bootstrap & jQuery
               <div>FavIcon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
