--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <iframe src="https://embed.spotify.com/?uri=spotify:user:1281363634:playlist:0uVT4xZF3USRjm23b0OlhX" frameborder="0" allowtransparency="true"></iframe>
     </div>
   </div>
-  <div class="text-center quote" id="quote">
+  <div class="text-center quote hidden" id="quote">
 
   </div>
 
